test/error/end_label_package_wrong.sv
// pattern: element "yes" has mismatched end label "no"
package yes;
endpackage : no
